<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="UISRAEL.JCofre.CAPTCAM.registroUsuario">

    <ImageView
        android:id="@+id/imageViewId"
        android:layout_width="match_parent"
        android:src="@drawable/dowload"

        android:layout_height="368dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="96dp"
            android:layout_height="58dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="44293-camera.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />

        <Button
            android:id="@+id/btnTomarFoto"
            android:layout_width="215dp"
            android:layout_height="match_parent"

            android:text="TOMAR FOTO" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view2"
            android:layout_width="96dp"
            android:layout_height="58dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="44293-camera.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />

    </LinearLayout>


    <EditText
        android:id="@+id/edNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:ems="10"
        android:hint="Nombre del usuario"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/edCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Correo del usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"

        android:inputType="textPersonName|textPassword" />





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_ingresar"
            android:text="Guardar" />

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="35dp"

            android:text="REGRESAR" />

    </LinearLayout>


</LinearLayout>


