...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_ingresar"
        android:text="ACTIVAR" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="Cerrar Sesión"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_ingresar"
        app:layout_constraintStart_toStartOf="parent" />
|


...
