...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:tint="@android:color/white"
        android:src="@drawable/ic_baseline_switch_camera_24"
        android:layout_margin="16dp"
        android:contentDescription="TODO" />


    <!--     <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_margin="16dp"
            android:contentDescription="TODO"
            android:src="@android:drawable/ic_input_add"
...
